responsive design added

--- a/template 1 using bootstrap/index.html
+++ b/template 1 using bootstrap/index.html
@@ -108,7 +108,7 @@
     <div class="row text-center bg-light features">
 
 
-        <div class="col-4">
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class=" bi bi-magic"
                 viewBox="0 0 16 16">
                 <path
@@ -123,7 +123,7 @@
 
 
         </div>
-        <div class="col-4">
+        <div class="col-lg-4 col-md-4 col-sm-12">
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-gem"
                 viewBox="0 0 16 16">
                 <path
@@ -138,7 +138,7 @@
 
 
         </div>
-        <div class="col-4">
+        <div class="col-lg-4 col-md-4 col-sm-12">
 
             <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
                 class="bi bi-globe-asia-australia" viewBox="0 0 16 16">
@@ -183,12 +183,12 @@
             <div class="row p-15">
 
 
-                <div class="col-8">
+                <div class="col-lg-8 col-md-6 col-sm-12">
                     <div class="row">
 
 
 
-                        <div class="col-6">
+                        <div class="col-lg-6 col-sm-12">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                                 class="d-inline p-1 bi bi-brush" viewBox="0 0 16 16">
                                 <path
@@ -206,7 +206,7 @@
 
 
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-6 col-sm-12">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                                 class="d-inline p-1 bi bi-palette" viewBox="0 0 16 16">
                                 <path
@@ -228,7 +228,7 @@
                         </div>
 
 
-                        <div class="col-6">
+                        <div class="col-lg-6 col-sm-12">
 
 
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
@@ -252,7 +252,7 @@
                         </div>
 
 
-                        <div class="col-6">
+                        <div class="col-lg-6 col-sm-12">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
                                 class="d-inline p-1 bi bi-gem" viewBox="0 0 16 16">
                                 <path
@@ -274,7 +274,7 @@
                     </div>
 
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6 d-none d-sm-block">
 
                     <img src="assets/mo2.jpg" alt="">
 
@@ -320,7 +320,7 @@
 
 
 
-                <div class="col-3 porfolio-card bg-white mx-4">
+                <div class="col-lg-3 col-sm-12 porfolio-card bg-white mx-4">
 
                     <img src="assets/workstation-laptop.jpg" class="w-100 p-1 h-50" alt="">
 
@@ -335,7 +335,7 @@
 
                 </div>
 
-                <div class="col-3 porfolio-card bg-white mx-4">
+                <div class="col-lg-3 col-sm-12 porfolio-card bg-white mx-4">
 
                     <img src="assets/books.jpg" class="w-100 p-1 h-50" alt="">
 
@@ -350,7 +350,7 @@
 
                 </div>
 
-                <div class="col-3 porfolio-card bg-white mx-4">
+                <div class="col-lg-3 col-sm-12 porfolio-card bg-white mx-4">
 
                     <img src="assets/book.jpg" class="w-100 p-1 h-50" alt="">
 
@@ -408,14 +408,14 @@
 
 
 
-                <div class="col-6 image">
+                <div class="col-6 image d-none d-sm-block">
                     <img src="assets/work-flawer.jpeg" alt="">
                 </div>
                 <div class="col-2 py-4">
 
                 </div>
 
-                <div class="col-6">
+                <div class="col-lg-6 about-info">
                     <h3>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste consequuntur accusamus
                         praesentium?
