finish from creating shop project and 1- registration page 2- login 3- home page

--- a/javascript project/a.html
+++ b/javascript project/a.html
@@ -36,19 +36,7 @@
         <script>
 
 
-
-
-
-            let startTime = performance.now();
-
-            for (let i = 1; i <= 99999; i++) {
-                console.log(i);
-            }
-
-            let endTime = performance.now();
-            let timeTaken = Math.floor(endTime - startTime);
-
-            console.log(`Loop Took ${timeTaken} Milliseconds.`);
+console.log(4 / []);
 
 
 
